--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -2,4 +2,5 @@ $background-color: #252429;
 $background-color-home: #151516;
 $background-color-service: #dbdbdb;
 $primary-color: #397479;
-$video-color:rgb(17, 17, 17);
+$video-color:rgb(10, 10, 10);
+$load: #252429;
