--- a/src/sass/mediaquery.scss
+++ b/src/sass/mediaquery.scss
@@ -77,7 +77,7 @@
         .container-right{
             flex-direction: column;
             form{
-                margin: 50px 0;
+                margin: 30px 0;
             }
             .container-left{
                 margin-right: 0px;
@@ -98,14 +98,26 @@
         }
     }
     .container-pics{
-        .img-gallery{
-            border: 2px solid white;
-        }
         .container-content-pics{
-            display: flex;
-            flex-direction: column;
+            grid-template-columns: repeat(2, 1fr);
             gap: 10px;
             padding: 0 20px;
+            .h-1{
+                grid-column: 1 / 2;
+                grid-row: span 1;
+            }
+            .h-2{
+                grid-column: 2 / 3;
+                grid-row: span 1;
+            }
+            .w-1{
+                grid-column: 1 / 2;
+                grid-column: span 1;
+            }
+            .w-2{
+                grid-column: 2 / 3;
+                grid-column: span 1;
+            }
         }
     }
     .home{
@@ -121,11 +133,13 @@
         }
     }
 }
-@media(max-width: 780px){
+@media(max-width: 900px){
     .container-benefits{
         flex-direction: column;
         height: 100%;
     }
+}
+@media(max-width: 780px){
     .container-about{
         background-position: center;
         background-size: cover;
@@ -157,17 +171,6 @@
 }
 @media(max-width: 620px){
     .container-about{
-        .container-heading{
-            font-size: 20px;
-            text-align: center;
-            h1{
-                margin-bottom: 20px;
-            }
-            span{
-                font-weight: 700;
-                color: $primary-color;
-            }
-        }
         .container-content-about{
             max-width: 500px;
             padding: 30px 5px;
@@ -179,6 +182,35 @@
         .container-heading{
             h1{
                margin: 20px;
+            }
+        }
+        .container-carousel{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .carousel-control-prev-icon,
+            .carousel-control-next-icon {
+                position: absolute;
+            }
+            .carousel{
+                .box{
+                    flex-direction: column;
+                    .desc{
+                        margin-right: 0px;
+                        margin: 20px 0;
+                        p:hover{
+                            color: $primary-color;
+                        }
+                        a{
+                            text-decoration: none;
+                        }
+                    }
+                    img{
+                        margin-top: 30px;
+                        margin-left: 0px;
+                        width: 200px;
+                    }
+                }
             }
         }
     }
@@ -204,18 +236,6 @@
     }
 }
 @media(max-width: 500px){
-    .container-team{
-        min-height: 480px;
-        .container-carousel{
-            .carousel{
-                .box{
-                    img{
-                        width: 180px;
-                    }
-                }
-            }
-        }
-    }
     .container-policy{
         background-color: $background-color-service;
         padding: 50px 20px;
@@ -237,6 +257,24 @@
                 p{
                     margin-top: 20px;
                 }
+            }
+        }
+    }
+    .home{
+        .container-logo{
+            .logo{
+                max-width: 340px;
+                width: 100%;
+            }
+            h1{
+                font-size: 25px;
+            }
+            span{
+                
+            }
+            button{
+                font-size: 16px;
+                transition: all 0.4s;
             }
         }
     }
@@ -263,6 +301,30 @@
     .container-pics{
         .container-heading{
             margin: 50px 3px;
+        }
+        .container-content-pics{
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+    .container-contact{
+        .container-right{
+            form{
+                max-width: 300px;
+                width: 100%;
+                height: 520px;
+                .input-group{
+                    max-width: 82%;
+                }
+                .input{
+                    width: 100%;
+                    height: 40px;
+                }
+                button{
+                    width: 82%;
+                    padding: 12px;
+                    font-size: 17px;
+                }
+            }
         }
     }
 }
@@ -294,44 +356,6 @@
             .box{
                 .icon{
                     font-size: 55px;
-                }
-            }
-        }
-    }
-    .container-contact{
-        min-height: 1000px;
-        height: 100%;
-        .container-right{
-            form{
-                padding: 20px 0;
-                max-width: 300px;
-                height: 520px;
-                input{
-                    height: 100px;
-                }
-                label{
-                    width: 79%;
-                }
-            }
-        }
-    }
-    .container-team{
-        .container-carousel{
-            .carousel-control-prev-icon,
-            .carousel-control-next-icon {
-                position: absolute;
-                bottom: -5px;
-            }
-            .carousel{
-                .box{
-                    flex-direction: column;
-                    .desc{
-                        margin-top: 20px;
-                        margin-right: 0px;
-                    }
-                    img{
-                        margin-left: 0px;
-                    }
                 }
             }
         }
