--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -37,6 +37,16 @@
                 }
             }
         }
+        .icon{
+            width: 50px;
+            height: 50px;
+            overflow: hidden;
+            img{
+                margin-top: 50px;
+                width: 50px;
+                transition: all 0.4s;
+            }
+        }
     }
     .container-mobile{
         display: none;
@@ -79,11 +89,17 @@
     }
 }
 #navbar.fixed{
-    z-index: 3;
+    z-index: 99999;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.432);
     backdrop-filter: blur(5px);
     transition: all 0.4s;
+    .icon{
+        img{
+            margin-top: 0px;
+            transition: all 0.4s;
+        }
+    }
 }
 .NavbarWork{
     width: 100%;
@@ -171,6 +187,7 @@
                 margin-top: 250px;
             }
             button{
+                z-index: 1;
                 margin-top: 20px;
                 background-color: $primary-color;
                 border: 2px solid $background-color-service;
@@ -196,21 +213,7 @@
         }
     }
 }
-.fslightbox-nav {
-    z-index: 2
-}
-.fslightbox-svg-path {
-    fill: $primary-color !important;
-}
-.fslightbox-container * {
-    backdrop-filter: blur(5px);
-}
-.fslightbox-slide-btn {
-    padding: 9px;
+.swiper-button-prev:after, .swiper-button-next:after{
     font-size: 40px !important;
-    background: none !important;
-    img, svg {
-        height: 25px;
-        width: 25px;
-    }
 }
+
