--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -42,6 +42,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
+        pointer-events: none;
     }
     .container-logo{
         width: 100%;
@@ -97,6 +98,7 @@
         height: 720px;
         border: 4px solid $primary-color;
         background-color: $background-color-service;
+        box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.75);
         .container-heading{
             display: flex;
             flex-direction: column;
@@ -129,40 +131,30 @@
     align-items: center;
     border-bottom: 4px solid $primary-color;
     background-color: $background-color;
-    background-image: url('../../public/img/logo/banner.png');
-    background-position: left 120px;
+    background-image: url('/img/logo/banner.png');
     background-size: 100%;
+    background-position-y: bottom;
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding: 0 10px;
     overflow: hidden;
-    .container-heading{
-        font-size: 20px;
-        text-align: center;
-        h1{
-            margin-bottom: 20px;
-        }
-        p{
-            margin-bottom: 50px;
-        }
-        span{
-            font-weight: 700;
-            color: $primary-color;
-        }
-    }
     .container-content-about{
-        backdrop-filter: blur(10px);
+        backdrop-filter: blur(12px);
         max-width: 600px;
         width: 100%;
-        padding: 50px;
+        padding: 30px;
         border: 2px solid white;
         text-align: center;
+        box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.75);
         h1{
             margin-bottom: 20px;
         }
         span{
             color: $primary-color;
             font-weight: 700;
+        }
+        p{
+            font-size: 20px;
         }
     }
 }
@@ -186,10 +178,11 @@
         h1{
             width: 100%;
             color: $primary-color;
-            margin-top: 20px;
-            margin-bottom: -25px;
+            margin-top: 20px ;
+         
         }
         .desc{
+            margin-top: -25px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -209,6 +202,9 @@
             width: 100%;
             font-size: 50px;
             fill: $primary-color;
+        }
+        .space{
+            
         }
     }
 }
@@ -311,53 +307,49 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                align-items: center;
-                margin: 17px 0;
+                align-items: left;
+                margin: 6px 0;
                 position: relative;
                 width: 100%;
                 max-width: 80%;
-                background-color: green;
-            }
-            .input{
-                padding: 10px ;
-                width: 100%;
-                max-width: 300px;
-                border: transparent;
-            }
-            .placeholder{
-                position: absolute;
-                top: 10px;
-                left: 8px;
-                font-size: 14px;
-                padding: 0px 5px;
-                opacity: 0.6;
-                color: rgb(10, 10, 10);
-                font-weight: 700;
-                background-color: transparent;
-                transition: 0.3s;
-                pointer-events: none;
-            }
-            .input:focus + .placeholder{
-                opacity: 1;
-                font-size: 17px;
-                left: 0;
-                top: -27px;
-                color: rgb(250, 250, 250);
-                font-weight: 700;
-            }
-            .input:focus{
-                outline: none;
-                border-bottom: 3px solid $primary-color;
+                label{
+                    margin-bottom: 5px;
+                }
+                .input{
+                    color: $background-color;
+                    padding: 0 5px;
+                    width: 100%;
+                    max-width: 300px;
+                    height: 45px;
+                    border: 2px solid transparent;
+                    transition: all 0.4s;
+                }
+                .input:focus{
+                    outline: none;
+                    border-bottom: 3px solid $primary-color;
+                    transition: all 0.4s;
+                }
+                textarea{
+                    padding: 0 5px;
+                    color: $background-color;
+                    transition: all 0.4s;
+                }
+                textarea:focus{
+                    outline: none;
+                    border-bottom: 3px solid $primary-color;
+                    transition: all 0.4s;
+                }
             }
             button{
-                margin-top: 20px;
+                margin: 20px;
                 width: 80%;
-                border: 2px solid $background-color;
+                border: 2px solid transparent;
                 background-color: #48af19;
                 cursor: pointer;
                 padding: 15px;
                 font-size: 18px;
                 transition: all 0.4s;
+                box-shadow: 0px 2px 10px 0px rgba(2, 2, 2, 0.75);
             }
             button:hover{
                 background-color: #275c0f;
@@ -469,7 +461,7 @@
     justify-content: center;
     text-align: center;
     .container-heading{
-        margin: 50px;
+        margin: 50px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -518,12 +510,16 @@
         .item{
             overflow: hidden;
             position: relative;
+            border: 2px solid white;
         }
-        .img-gallery:hover{
-            transition: all 0.4s;
-            transform: scale(1.1);
-            cursor: pointer;
-            opacity: 0.5;
+        .item:hover{
+            border: 2px solid $primary-color;
+            .img-gallery{
+                transition: all 0.4s;
+                transform: scale(1.1);
+                cursor: pointer;
+                opacity: 0.5;
+            }
         }
     }
 }
@@ -585,5 +581,8 @@ footer{
     }
     a:hover{
         color: $primary-color;
+    }
+    span{
+        color: $background-color;
     }
 }
