--- a/src/sass/mediaquery.scss
+++ b/src/sass/mediaquery.scss
@@ -1,369 +1,367 @@
-@media(max-width: 980px){   
-    #navbar{
-        .container-desktop{
-            display: none;
-        }
-        .container-mobile{
-            display: flex;
-            .hamburger-line{
-                z-index: 3;
-                position: absolute;
-                display: flex;
-                flex-direction: column;
-                top: 20px;
-                right: 20px;
-                padding: 5px;
-                cursor: pointer;
-                padding: 18px 18px;
-                border-radius: 5px;
-                background-color: rgba(0, 0, 0, 0.432);
-                overflow: hidden;
-                .start{
-                    position: absolute;
-                    right: 4px;
-                    top: 9px;
-                    width: 15px;
-                    height: 3px;
-                    background-color: white;
-                    transition: all 0.4s;
-                }
-                .mid{
-                    position: absolute;
-                    right: 4px;
-                    top: 16px;
-                    width: 20px;
-                    height: 3px;
-                    background-color: white;
-                    transition: all 0.4s;
-                }
-                .end{
-                    position: absolute;
-                    top: 24px;
-                    right: 4px;
-                    width: 28px;
-                    height: 3px;
-                    background-color: white;
-                    transition: all 0.4s;
-                }
-                ////////////////////////////////
-                #start.active{
-                    top: 11px;
-                    right: 7px;
-                    width: 28px;
-                    transform: rotate(42deg)translate(7px, 2px);
-                    transition: all 0.4s;
-                }
-                #mid.active{
-                    right: -20px;
-                    transition: all 0.4s;
-                    
-                }
-                #end.active{
-                    top: 26px;
-                    right: 8px;
-                    transform: rotate(134deg)translate(-9px, 3px);
-                    transition: all 0.4s;
-                }
-            }
-        }
+@media (max-width: 980px) {
+  #navbar {
+    .container-desktop {
+      display: none;
     }
-    #navbar.fixed{
-        background-color: transparent;
-        backdrop-filter: blur(0px);
-    }
-    .container-contact{
-        min-height: 1000px;
-        height: 100%;
-        .container-right{
-            flex-direction: column;
-            form{
-                margin: 30px 0;
-            }
-            .container-left{
-                margin-right: 0px;
-                margin-top: 0px;
-                .desktop{
-                    display: none;
-                }
-                .mobile{
-                    display: block;
-                }
-                h1,p{
-                   padding: 5px;
-                }
-                .arrow{
-                    display: none;
-                }
-            }
-        }
-    }
-    .container-pics{
-        .container-content-pics{
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
-            padding: 0 20px;
-            .h-1{
-                grid-column: 1 / 2;
-                grid-row: span 1;
-            }
-            .h-2{
-                grid-column: 2 / 3;
-                grid-row: span 1;
-            }
-            .w-1{
-                grid-column: 1 / 2;
-                grid-column: span 1;
-            }
-            .w-2{
-                grid-column: 2 / 3;
-                grid-column: span 1;
-            }
-        }
-    }
-    .home{
-        .container-fixed{
-            img{
-               
-                width: 60px;
-            }
-            .neon {
-                width: 20%;
-                height: 20%;
-            }          
-        }
-    }
-}
-@media(max-width: 900px){
-    .container-benefits{
+    .container-mobile {
+      display: flex;
+      .hamburger-line {
+        z-index: 3;
+        position: absolute;
+        display: flex;
         flex-direction: column;
-        height: 100%;
+        top: 20px;
+        right: 20px;
+        padding: 5px;
+        cursor: pointer;
+        padding: 18px 18px;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.432);
+        overflow: hidden;
+        .start {
+          position: absolute;
+          right: 4px;
+          top: 9px;
+          width: 15px;
+          height: 3px;
+          background-color: white;
+          transition: all 0.4s;
+        }
+        .mid {
+          position: absolute;
+          right: 4px;
+          top: 16px;
+          width: 20px;
+          height: 3px;
+          background-color: white;
+          transition: all 0.4s;
+        }
+        .end {
+          position: absolute;
+          top: 24px;
+          right: 4px;
+          width: 28px;
+          height: 3px;
+          background-color: white;
+          transition: all 0.4s;
+        }
+        ////////////////////////////////
+        #start.active {
+          top: 11px;
+          right: 7px;
+          width: 28px;
+          transform: rotate(42deg) translate(7px, 2px);
+          transition: all 0.4s;
+        }
+        #mid.active {
+          right: -20px;
+          transition: all 0.4s;
+        }
+        #end.active {
+          top: 26px;
+          right: 8px;
+          transform: rotate(134deg) translate(-9px, 3px);
+          transition: all 0.4s;
+        }
+      }
     }
+  }
+  #navbar.fixed {
+    background-color: transparent;
+    backdrop-filter: blur(0px);
+  }
+  .container-contact {
+    min-height: 1000px;
+    height: 100%;
+    .container-right {
+      flex-direction: column;
+      form {
+        margin: 30px 0;
+      }
+      .container-left {
+        margin-right: 0px;
+        margin-top: 0px;
+        .desktop {
+          display: none;
+        }
+        .mobile {
+          display: block;
+        }
+        h1,
+        p {
+          padding: 5px;
+        }
+        .arrow {
+          display: none;
+        }
+      }
+    }
+  }
+  .container-pics {
+    .container-content-pics {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+      padding: 0 20px;
+      .h-1 {
+        grid-column: 1 / 2;
+        grid-row: span 1;
+      }
+      .h-2 {
+        grid-column: 2 / 3;
+        grid-row: span 1;
+      }
+      .w-1 {
+        grid-column: 1 / 2;
+        grid-column: span 1;
+      }
+      .w-2 {
+        grid-column: 2 / 3;
+        grid-column: span 1;
+      }
+    }
+  }
+  .home {
+    .container-fixed {
+      img {
+        width: 60px;
+      }
+      .neon {
+        width: 20%;
+        height: 20%;
+      }
+    }
+  }
 }
-@media(max-width: 780px){
-    .container-about{
-        background-position: center;
-        background-size: cover;
-    }
+@media (max-width: 900px) {
+  .container-benefits {
+    flex-direction: column;
+    height: 100%;
+  }
 }
-@media(max-width: 660px){
-    .container-redes{
-        .container-content-redes{
-            .box{
-                all: initial;
-                .icon{
-                    margin: 0 10px;
-                }
-                span{
-                    all: initial;
-                    display: none;
-                }
-            }
-            .box:hover span{
-                all: initial;
-                display: none;
-             }
-            
-            .box:hover{
-                all: initial;
-            }
-        }
-    }
+@media (max-width: 780px) {
+  .container-about {
+    background-position: center;
+    background-size: cover;
+  }
 }
-@media(max-width: 620px){
-    .container-about{
-        .container-content-about{
-            max-width: 500px;
-            padding: 30px 5px;
+@media (max-width: 660px) {
+  .container-redes {
+    .container-content-redes {
+      .box {
+        all: initial;
+        .icon {
+          margin: 0 10px;
         }
+        span {
+          all: initial;
+          display: none;
+        }
+      }
+      .box:hover span {
+        all: initial;
+        display: none;
+      }
+
+      .box:hover {
+        all: initial;
+      }
     }
+  }
 }
-@media(max-width: 550px){
-    .container-team{
-        .container-heading{
-            h1{
-               margin: 20px;
-            }
-        }
-        .container-carousel{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            .carousel-control-prev-icon,
-            .carousel-control-next-icon {
-                position: absolute;
-            }
-            .carousel{
-                .box{
-                    flex-direction: column;
-                    .desc{
-                        margin-right: 0px;
-                        margin: 20px 0;
-                        p:hover{
-                            color: $primary-color;
-                        }
-                        a{
-                            text-decoration: none;
-                        }
-                    }
-                    img{
-                        margin-top: 30px;
-                        margin-left: 0px;
-                        width: 200px;
-                    }
-                }
-            }
-        }
+@media (max-width: 620px) {
+  .container-about {
+    .container-content-about {
+      max-width: 500px;
+      padding: 30px 5px;
     }
-    .container-contact{
-        .container-right{
-            .container-left{
-                p{
-                   font-size: 17px;
-                }
-            }
-        }
-    }
-    .home{
-        .container-fixed{
-            img{
-                width: 50px;
-            }
-            .neon {
-                width: 20%;
-                height: 20%;
-            }          
-        }
-    }
+  }
 }
-@media(max-width: 500px){
-    .container-policy{
-        background-color: $background-color-service;
-        padding: 50px 20px;
-        h1,h2{
-            color: $primary-color;
-            font-size: 25px;
-            text-align: center;
-            margin: 30px 0;
-        }
-        h3,p,strong{
-            font-size: 15px;
-        }
+@media (max-width: 550px) {
+  .container-team {
+    .container-heading {
+      h1 {
+        margin: 20px;
+      }
     }
-    .container-swiper{
-        .slide-box{
-            .desc{
-                background-color: rgba(0, 0, 0, 0.733);
-                opacity: 1;
-                p{
-                    margin-top: 20px;
-                }
+    .container-carousel {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      .carousel-control-prev-icon,
+      .carousel-control-next-icon {
+        position: absolute;
+      }
+      .carousel {
+        .box {
+          flex-direction: column;
+          .desc {
+            margin-right: 0px;
+            margin: 20px 0;
+            p:hover {
+              color: $primary-color;
             }
+            a {
+              text-decoration: none;
+            }
+          }
+          img {
+            margin-top: 30px;
+            margin-left: 0px;
+            width: 200px;
+          }
         }
+      }
     }
-    .home{
-        .container-logo{
-            .logo{
-                max-width: 340px;
-                width: 100%;
-            }
-            h1{
-                font-size: 25px;
-            }
-            span{
-                
-            }
-            button{
-                font-size: 16px;
-                transition: all 0.4s;
-            }
+  }
+  .container-contact {
+    .container-right {
+      .container-left {
+        p {
+          font-size: 17px;
         }
+      }
     }
+  }
+  .home {
+    .container-fixed {
+      img {
+        width: 50px;
+      }
+      .neon {
+        width: 20%;
+        height: 20%;
+      }
+    }
+  }
 }
-@media(max-width: 450px){
-    .container-benefits{
-        .box{
-            margin-top: 20px;
-            max-width: 320px;
-            h1{
-                font-size: 25px;
-            }
-            .desc{
-                p{
-                    font-size: 18px;
-                }
-            }
-            .icon{
-                margin-bottom: -5px;
-            }
-            
-        }
+@media (max-width: 500px) {
+  .container-policy {
+    background-color: $background-color-service;
+    padding: 50px 20px;
+    h1,
+    h2 {
+      color: $primary-color;
+      font-size: 25px;
+      text-align: center;
+      margin: 30px 0;
     }
-    .container-pics{
-        .container-heading{
-            margin: 50px 3px;
-        }
-        .container-content-pics{
-            grid-template-columns: repeat(1, 1fr);
-        }
+    h3,
+    p,
+    strong {
+      font-size: 15px;
     }
-    .container-contact{
-        .container-right{
-            form{
-                max-width: 300px;
-                width: 100%;
-                height: 520px;
-                .input-group{
-                    max-width: 82%;
-                }
-                .input{
-                    width: 100%;
-                    height: 40px;
-                }
-                button{
-                    width: 82%;
-                    padding: 12px;
-                    font-size: 17px;
-                }
-            }
+  }
+  .container-swiper {
+    .slide-box {
+      .desc {
+        background-color: rgba(0, 0, 0, 0.733);
+        opacity: 1;
+        p {
+          margin-top: 20px;
         }
+      }
     }
+  }
+  .home {
+    .container-logo {
+      .logo {
+        max-width: 340px;
+        width: 100%;
+      }
+      h1 {
+        font-size: 25px;
+      }
+      button {
+        font-size: 16px;
+        transition: all 0.4s;
+      }
+    }
+  }
 }
-@media(max-width: 350px){
-    .container-service{
-        .container-content-service{
-            height: 650px;
-            .container-heading{
-                margin-top: 50px;
-                h1{
-                    margin-bottom: 20px;
-                }
-                p{
-                    margin-bottom: 0px;
-                }
-            }
+@media (max-width: 450px) {
+  .container-benefits {
+    .box {
+      margin-top: 20px;
+      max-width: 320px;
+      h1 {
+        font-size: 25px;
+      }
+      .desc {
+        p {
+          font-size: 18px;
         }
+      }
+      .icon {
+        margin-bottom: -5px;
+      }
     }
-    .container-swiper{
-        .swiper-slide{
-            padding: 0 10px;
-        }
-        .slide-box{
-            height: 380px;
-        }
+  }
+  .container-pics {
+    .container-heading {
+      margin: 50px 3px;
     }
-    .container-redes{
-        .container-content-redes{
-            .box{
-                .icon{
-                    font-size: 55px;
-                }
-            }
-        }
+    .container-content-pics {
+      grid-template-columns: repeat(1, 1fr);
     }
-    footer{
-        h1{
-            color: $background-color;
-            font-size: 15px;
+  }
+  .container-contact {
+    .container-right {
+      form {
+        max-width: 300px;
+        width: 100%;
+        height: 520px;
+        .input-group {
+          max-width: 82%;
         }
+        .input {
+          width: 100%;
+          height: 40px;
+        }
+        button {
+          width: 82%;
+          padding: 12px;
+          font-size: 17px;
+        }
+      }
     }
+  }
+}
+@media (max-width: 350px) {
+  .container-service {
+    .container-content-service {
+      height: 650px;
+      .container-heading {
+        margin-top: 50px;
+        h1 {
+          margin-bottom: 20px;
+        }
+        p {
+          margin-bottom: 0px;
+        }
+      }
+    }
+  }
+  .container-swiper {
+    .swiper-slide {
+      padding: 0 10px;
+    }
+    .slide-box {
+      height: 380px;
+    }
+  }
+  .container-redes {
+    .container-content-redes {
+      .box {
+        .icon {
+          font-size: 55px;
+        }
+      }
+    }
+  }
+  footer {
+    h1 {
+      color: $background-color;
+      font-size: 15px;
+    }
+  }
 }
